# EEGsuite

./: .gitignore  README.md  lsl_stream_analysis_BrainFlowEEG_20260319_120103.txt  lsl_stream_analysis_BrainFlowEEG_20260321_143023.txt  lsl_stream_analysis_BrainFlowEEG_20260401_191444.txt  pyproject.toml  requirements.txt  test_tfr_contrast.py
.github/: copilot-instructions.md
config/: google_drive.yaml
config/analysis/: contrast_32hz.yaml  contrast_37hz.yaml  contrast_42hz.yaml  contrast_84hz.yaml  default_offline.yaml
config/hardware/: freeeeg.yaml  freeeeg_only.yaml
config/montages/: freg8.yaml  freg9.yaml  kullab.yaml
config/protocols/: sweep_default.yaml  sweep_tfr.yaml
docs/: ADMIN_GOOGLE_DRIVE.md  ANALYSIS_TFR_CONTRAST.md  HARDWARE_VALIDATION_EMI.md  Hardware.md  MONTAGE_FREG8.md  MONTAGE_FREG9.md  MONTAGE_KULLAB.md  Montages.md  SWEEP_PROTOCOL_GUIDE.md  Sweep.md  USER_MANUAL.md  Usage.md  lslw11firewall.md  setup procedure cmd.txt
docs/protocol/: EEG_STIM_42HZ_FREG8_PROTOCOL.md  EEG_STIM_42HZ_FREG9_TFR_PROTOCOL.md  QUICK_START.md
src/: main.py
src/converting/: convert.py
src/eegsuite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/recording/: sweep.py  sweep_only.py
src/streaming/: LSLserver.py  server.py
src/utils/: check_google_drive_health.py  config.py  google_drive.py  logger.py  paths.py  test_gdrive.py
temp/: montage kullab.txt
vbs/firmware/: README.md
vbs/webui/: README.md  f2heal_library.js  f2heal_webui.css  f2heal_webui.html  f2heal_webui.js  presets.json  scp cmd W112bmax.txt
(+43 files in other folders)
